--- a/html/index.html
+++ b/html/index.html
@@ -1,21 +1,157 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>metalSpace</title>
+    <link rel="icon" href="images/guitar.png" />
   </head>
+  <style>
+    h2 {
+      color: orangered;
+    }
+  </style>
+  <link rel="stylesheet" href="assets/styles.css" />
   <body>
-    <header>Cabecera</header>
+    <header id="inicio"><strong>Metal Bands</strong></header>
+    <hr />
+    <details open> <!-- Con el atributo open puedo tener este details desplegado-->
+      <summary>Contenido</summary>
+      <br>
+      <article>En esta página enceuntras:</article>
+      <ol>
+        <li>Bandas</li>
+        <li>Clasificación por paises</li>
+        <li>Multimedia Metal</li>
+        <li>Otros</li>
+      </ol>
+    </details>
+    <hr />
     <nav>
-      <a href="https://htmlreference.io""> estuduar html </a>
+      <a
+        href="https://es.wikipedia.org/wiki/Black_Sabbath"
+        target="_blank"
+        rel="nofollow"
+      >
+        Black Sabbath </a
+      >| <a href="index.html#metallica"> Metallica </a>|
+      <a href="otros.html">Otros </a>|
+      <a href="#">
+        <!-- ul>li*18>a lista desordenada con sus li y dentro de estos una ancla -->
+        <img src="images/share.svg" alt="compartir" />
+      </a>
     </nav>
+    <hr />
     <main>
+      <figure>
+        <img src="images/concert.jpg" alt="Picture of bands" />
+      </figure>
+      <figcaption>
+        <cite>
+          Tomado de
+          https://www.mediotiempo.com/otros-mundos/5-festivales-metal-tienes-asistir-2020</cite
+        >
+      </figcaption>
+      <hr />
       <section>
-        <article>Articulo</article>
+        <article id="metallica">
+          <h2>Metallica</h2>
+          <p>
+            Metallica es una banda estadounidense de thrash metal originaria de
+            Los Ángeles, pero con base en San Francisco desde febrero de 1983.
+            Fue fundada en 1981 en Los Ángeles por Lars Ulrich y James Hetfield,
+            a los que se les unirían Dave Mustaine y Ron McGovney. Estos dos
+            músicos fueron después sustituidos por el guitarrista Kirk Hammett y
+            el bajista Cliff Burton respectivamente, Dave Mustaine fue despedido
+            un año después de ingresar en la banda debido a su excesiva adicción
+            al alcohol y su actitud violenta, siendo sustituido por Kirk Hammett
+            (exguitarrista de Exodus). Ron renuncia a la banda debido al mal
+            comportamiento de Dave Mustaine, el cual era violento y problemático
+            cuando estaba bajo el efecto del alcohol. El colmo fue cuando
+            Mustaine mojó el bajo de Ron con cerveza, él sin saberlo lo conectó,
+            recibiendo una descarga eléctrica. Es entonces, tras contactar con
+            Cliff Burton que la banda se traslada a San Francisco. (Cabe
+            resaltar que Ron sabía que lo iban a despedir y sustituir por Cliff
+            Burton). Por otra parte, el 27 de septiembre de 1986, fue la muerte
+            de Cliff Burton en un accidente de autobús en Suecia, durante una de
+            sus giras, esto provocó la entrada al grupo de Jason Newsted, quien,
+            tras su abandono quince años más tarde, sería sustituido por el
+            bajista actual, Robert Trujillo. Hasta la fecha, la banda ha editado
+            10 álbumes de estudio, siendo el último de estos Hardwired to Self
+            Destruct el cual fue lanzado mundialmente el 18 de noviembre del
+            2016. Las ventas totales de Metallica superan los 120 millones, y se
+            les considera parte de los cuatro grandes del thrash metal, junto
+            con Megadeth, Slayer y Anthrax. Además, el grupo ha conseguido
+            numerosos premios musicales, entre los que destacan nueve Grammys,
+            dos premios otorgados por la cadena musical MTV, dos galardones de
+            la Academia de Música Americana (American Music Awards) y dos
+            premios de la revista Billboard, además de pertenecer desde el año
+            2009 al Salón de la fama del Rock y poseer una estrella en el Paseo
+            de la Fama de la revista Kerrang!.
+          </p>
+        </article>
       </section>
     </main>
-    <aside>relacionados</aside>
-    <footer>pie de página</footer>
+    <aside>
+      <h2>Miembros</h2>
+      <ul>
+        <li>James Hetfield - Voz, guitarra rítmica (1981-presente).</li>
+        <li>Lars Ulrich - Batería (1981-presente).</li>
+        <li>Kirk Hammett - Guitarra líder, coros (1983-presente).</li>
+        <li>Robert Trujillo - Bajo eléctrico, coros (2003-presente).</li>
+      </ul>
+    </aside>
+    <cite>Información tomada de https://es.wikipedia.org</cite>
+    <br /><br />
+    <a href="index.html#inicio">⬅️Regresar</a>
+    <hr />
+    <h2>Clasificación por paises</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Nombre</th>
+          <th>País de origen</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Black Sabbath</td>
+          <td>United kingdom</td>
+        </tr>
+        <tr>
+          <td>Metallica</td>
+          <td>United States of America</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <th colspan="2"><small>En construcción</small></th>
+        </tr>
+      </tfoot>
+    </table>
+    <hr>
+    <h2>Multimedia Metal</h2>
+    <audio src="media/03 - For Whom The Bell Tolls.mp3" controls preload="auto"></audio><!-- Atributos autoplay, loop, muted, preload -->
+    <br><br>
+    <video id="video" src="media/pexels-cottonbro-5659545.mp4" controls preload="auto"></video><!-- Tiene las mismas etiquetas que audio pero ademas tiene poster -->
+    <hr />
+    <button onclick="alert('Has terminado tu recorrido')">Atencion</button>
+    <!-- Recibe eventos como onclick, onchange, otros...-->
+    <!-- Usar eventos en el html no es una buena práctica -->
+    <hr />
+    <footer>
+      Derechos reservados nn.co | Estudio de html | 2022 |
+      <a href="mailto:chrisvaec@gmail.com">Correo electrónico</a>|
+      <a href="tell:573003376588">Teléfono</a>|
+      <a href="https://api.whatsapp.com/send?phone=573003376588&&text=hola"
+        >WhatsApp</a
+      >
+    </footer>
+    <script>
+      console.log("Esta página es un medio de aprendizaje de manejo de html");
+    </script>
+    <script src="assets/codigos.js"></script>
+    <!-- Con esta linea estamos llamando la hoja de código JS -->
+    <hr />
   </body>
 </html>
