Estudio de html

--- a/html/index.html
+++ b/html/index.html
@@ -1,182 +1,270 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>metalSpace</title>
-    <link rel="icon" href="images/guitar.png" />
-  </head>
-  <style>
-    h2 {
-      color: orangered;
-    }
-  </style>
-  <link rel="stylesheet" href="assets/styles.css" />
 
-  <body>
-    <header id="inicio"><strong>Metal Bands</strong></header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>metalSpace</title>
+  <link rel="icon" href="images/guitar.png" />
+</head>
+<style>
+  h2 {
+    color: orangered;
+  }
+</style>
+<link rel="stylesheet" href="assets/styles.css" />
+
+<body>
+  <header id="inicio"><strong>Metal Bands</strong></header>
+  <hr />
+  <details open>
+    <!-- Con el atributo open puedo tener este details desplegado-->
+    <summary>Contenido</summary>
+    <br />
+    <article>En esta página enceuntras:</article>
+    <ol>
+      <li>Bandas</li>
+      <li>Clasificación por paises</li>
+      <li>Multimedia Metal</li>
+      <li>Ubiación geográfica</li>
+      <li>Otros</li>
+    </ol>
+  </details>
+  <hr />
+  <nav>
+    <a href="https://es.wikipedia.org/wiki/Black_Sabbath" target="_blank" rel="nofollow">
+      Black Sabbath </a>| <a href="index.html#metallica"> Metallica </a>|
+    <a href="otros.html">Otros </a>|
+    <a href="#">
+      <!-- ul>li*18>a lista desordenada con sus li y dentro de estos una ancla -->
+      <img src="images/share.svg" alt="compartir" />
+    </a>
+  </nav>
+  <hr />
+  <main>
+    <figure>
+      <img src="images/concert.jpg" alt="Picture of bands" />
+    </figure>
+    <figcaption>
+      <cite>
+        Tomado de
+        https://www.mediotiempo.com/otros-mundos/5-festivales-metal-tienes-asistir-2020</cite>
+    </figcaption>
     <hr />
-    <details open>
-      <!-- Con el atributo open puedo tener este details desplegado-->
-      <summary>Contenido</summary>
-      <br />
-      <article>En esta página enceuntras:</article>
-      <ol>
-        <li>Bandas</li>
-        <li>Clasificación por paises</li>
-        <li>Multimedia Metal</li>
-        <li>Ubiación geográfica</li>
-        <li>Otros</li>
-      </ol>
-    </details>
-    <hr />
-    <nav>
-      <a
-        href="https://es.wikipedia.org/wiki/Black_Sabbath"
-        target="_blank"
-        rel="nofollow"
-      >
-        Black Sabbath </a
-      >| <a href="index.html#metallica"> Metallica </a>|
-      <a href="otros.html">Otros </a>|
-      <a href="#">
-        <!-- ul>li*18>a lista desordenada con sus li y dentro de estos una ancla -->
-        <img src="images/share.svg" alt="compartir" />
-      </a>
-    </nav>
-    <hr />
-    <main>
-      <figure>
-        <img src="images/concert.jpg" alt="Picture of bands" />
-      </figure>
-      <figcaption>
-        <cite>
-          Tomado de
-          https://www.mediotiempo.com/otros-mundos/5-festivales-metal-tienes-asistir-2020</cite
-        >
-      </figcaption>
-      <hr />
-      <section>
-        <article id="metallica">
-          <h2>Metallica</h2>
-          <p>
-            Metallica es una banda estadounidense de thrash metal originaria de
-            Los Ángeles, pero con base en San Francisco desde febrero de 1983.
-            Fue fundada en 1981 en Los Ángeles por Lars Ulrich y James Hetfield,
-            a los que se les unirían Dave Mustaine y Ron McGovney. Estos dos
-            músicos fueron después sustituidos por el guitarrista Kirk Hammett y
-            el bajista Cliff Burton respectivamente, Dave Mustaine fue despedido
-            un año después de ingresar en la banda debido a su excesiva adicción
-            al alcohol y su actitud violenta, siendo sustituido por Kirk Hammett
-            (exguitarrista de Exodus). Ron renuncia a la banda debido al mal
-            comportamiento de Dave Mustaine, el cual era violento y problemático
-            cuando estaba bajo el efecto del alcohol. El colmo fue cuando
-            Mustaine mojó el bajo de Ron con cerveza, él sin saberlo lo conectó,
-            recibiendo una descarga eléctrica. Es entonces, tras contactar con
-            Cliff Burton que la banda se traslada a San Francisco. (Cabe
-            resaltar que Ron sabía que lo iban a despedir y sustituir por Cliff
-            Burton). Por otra parte, el 27 de septiembre de 1986, fue la muerte
-            de Cliff Burton en un accidente de autobús en Suecia, durante una de
-            sus giras, esto provocó la entrada al grupo de Jason Newsted, quien,
-            tras su abandono quince años más tarde, sería sustituido por el
-            bajista actual, Robert Trujillo. Hasta la fecha, la banda ha editado
-            10 álbumes de estudio, siendo el último de estos Hardwired to Self
-            Destruct el cual fue lanzado mundialmente el 18 de noviembre del
-            2016. Las ventas totales de Metallica superan los 120 millones, y se
-            les considera parte de los cuatro grandes del thrash metal, junto
-            con Megadeth, Slayer y Anthrax. Además, el grupo ha conseguido
-            numerosos premios musicales, entre los que destacan nueve Grammys,
-            dos premios otorgados por la cadena musical MTV, dos galardones de
-            la Academia de Música Americana (American Music Awards) y dos
-            premios de la revista Billboard, además de pertenecer desde el año
-            2009 al Salón de la fama del Rock y poseer una estrella en el Paseo
-            de la Fama de la revista Kerrang!.
-          </p>
-        </article>
-      </section>
-    </main>
-    <aside>
-      <h2>Miembros</h2>
-      <ul>
-        <li>James Hetfield - Voz, guitarra rítmica (1981-presente).</li>
-        <li>Lars Ulrich - Batería (1981-presente).</li>
-        <li>Kirk Hammett - Guitarra líder, coros (1983-presente).</li>
-        <li>Robert Trujillo - Bajo eléctrico, coros (2003-presente).</li>
-      </ul>
-    </aside>
-    <cite>Información tomada de https://es.wikipedia.org</cite>
-    <br /><br />
-    <a href="index.html#inicio">⬅️Regresar</a>
-    <hr />
-    <h2>Clasificación por paises</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>Nombre</th>
-          <th>País de origen</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Black Sabbath</td>
-          <td>United kingdom</td>
-        </tr>
-        <tr>
-          <td>Metallica</td>
-          <td>United States of America</td>
-        </tr>
-      </tbody>
-      <tfoot>
-        <tr>
-          <th colspan="2"><small>En construcción</small></th>
-        </tr>
-      </tfoot>
-    </table>
-    <hr />
-    <h2>Multimedia Metal</h2>
-    <audio
-      src="media/03 - For Whom The Bell Tolls.mp3"
-      controls
-      preload="auto"
-    ></audio>
-    <!-- Atributos autoplay, loop, muted, preload -->
-    <br /><br />
-    <video
-      id="video"
-      src="media/pexels-cottonbro-5659545.mp4"
-      controls
-      preload="auto"
-    ></video>
-    <!-- Tiene las mismas etiquetas que audio pero ademas tiene poster -->
-    <hr />
-    <button onclick="alert('Has terminado tu recorrido')">Atencion</button>
-    <!-- Recibe eventos como onclick, onchange, otros...-->
-    <!-- Usar eventos en el html no es una buena práctica -->
-    <hr />
-    <!-- Los iframes ueden ser páginas, ficheros, pdf, videos de youtube -->
-    <h2>Ubiación geográfica</h2>
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d158858.182370726!2d-0.10159865000000001!3d51.52864165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondres%2C%20Reino%20Unido!5e0!3m2!1ses!2sco!4v1647617869218!5m2!1ses!2sco"
-      width="600"
-      height="450"
-      style="border: 0"
-      allowfullscreen=""
-      loading="lazy"
-    ></iframe>
-    <hr />
-    <footer>
-      Derechos reservados nn.co | Estudio de html | 2022 |
-      <a href="mailto:chrisvaec@gmail.com">Correo electrónico</a>|
-      <a href="tell:573003376588">Teléfono</a>|
-      <a href="https://api.whatsapp.com/send?phone=573003376588&&text=hola"
-        >WhatsApp</a
-      >
-    </footer>
-    <script>
-      console.log("Esta página es un medio de aprendizaje de manejo de html");
-    </script>
-    <script src="assets/codigos.js"></script>
-    <!-- Con esta linea estamos llamando la hoja de código JS -->
-    <hr />
-  </body>
+    <section>
+      <article id="metallica">
+        <h2>Metallica</h2>
+        <p>
+          Metallica es una banda estadounidense de thrash metal originaria de
+          Los Ángeles, pero con base en San Francisco desde febrero de 1983.
+          Fue fundada en 1981 en Los Ángeles por Lars Ulrich y James Hetfield,
+          a los que se les unirían Dave Mustaine y Ron McGovney. Estos dos
+          músicos fueron después sustituidos por el guitarrista Kirk Hammett y
+          el bajista Cliff Burton respectivamente, Dave Mustaine fue despedido
+          un año después de ingresar en la banda debido a su excesiva adicción
+          al alcohol y su actitud violenta, siendo sustituido por Kirk Hammett
+          (exguitarrista de Exodus). Ron renuncia a la banda debido al mal
+          comportamiento de Dave Mustaine, el cual era violento y problemático
+          cuando estaba bajo el efecto del alcohol. El colmo fue cuando
+          Mustaine mojó el bajo de Ron con cerveza, él sin saberlo lo conectó,
+          recibiendo una descarga eléctrica. Es entonces, tras contactar con
+          Cliff Burton que la banda se traslada a San Francisco. (Cabe
+          resaltar que Ron sabía que lo iban a despedir y sustituir por Cliff
+          Burton). Por otra parte, el 27 de septiembre de 1986, fue la muerte
+          de Cliff Burton en un accidente de autobús en Suecia, durante una de
+          sus giras, esto provocó la entrada al grupo de Jason Newsted, quien,
+          tras su abandono quince años más tarde, sería sustituido por el
+          bajista actual, Robert Trujillo. Hasta la fecha, la banda ha editado
+          10 álbumes de estudio, siendo el último de estos Hardwired to Self
+          Destruct el cual fue lanzado mundialmente el 18 de noviembre del
+          2016. Las ventas totales de Metallica superan los 120 millones, y se
+          les considera parte de los cuatro grandes del thrash metal, junto
+          con Megadeth, Slayer y Anthrax. Además, el grupo ha conseguido
+          numerosos premios musicales, entre los que destacan nueve Grammys,
+          dos premios otorgados por la cadena musical MTV, dos galardones de
+          la Academia de Música Americana (American Music Awards) y dos
+          premios de la revista Billboard, además de pertenecer desde el año
+          2009 al Salón de la fama del Rock y poseer una estrella en el Paseo
+          de la Fama de la revista Kerrang!.
+        </p>
+      </article>
+    </section>
+  </main>
+  <aside>
+    <h2>Miembros</h2>
+    <ul>
+      <li>James Hetfield - Voz, guitarra rítmica (1981-presente).</li>
+      <li>Lars Ulrich - Batería (1981-presente).</li>
+      <li>Kirk Hammett - Guitarra líder, coros (1983-presente).</li>
+      <li>Robert Trujillo - Bajo eléctrico, coros (2003-presente).</li>
+    </ul>
+  </aside>
+  <cite>Información tomada de https://es.wikipedia.org</cite>
+  <br /><br />
+  <a href="index.html#inicio">⬅️Regresar</a>
+  <hr />
+  <h2>Clasificación por paises</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Nombre</th>
+        <th>País de origen</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Black Sabbath</td>
+        <td>United kingdom</td>
+      </tr>
+      <tr>
+        <td>Metallica</td>
+        <td>United States of America</td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <th colspan="2"><small>En construcción</small></th>
+      </tr>
+    </tfoot>
+  </table>
+  <hr />
+  <h2>Multimedia Metal</h2>
+  <audio src="media/03 - For Whom The Bell Tolls.mp3" controls preload="auto"></audio>
+  <!-- Atributos autoplay, loop, muted, preload -->
+  <br /><br />
+  <video id="video" src="media/pexels-cottonbro-5659545.mp4" controls preload="auto"></video>
+  <!-- Tiene las mismas etiquetas que audio pero ademas tiene poster -->
+  <hr />
+  <button onclick="alert('Has terminado tu recorrido')">Atencion</button>
+  <!-- Recibe eventos como onclick, onchange, otros...-->
+  <!-- Usar eventos en el html no es una buena práctica -->
+  <hr />
+  <!-- Los iframes ueden ser páginas, ficheros, pdf, videos de youtube -->
+  <h2>Ubiación geográfica</h2>
+  <iframe
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d158858.182370726!2d-0.10159865000000001!3d51.52864165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondres%2C%20Reino%20Unido!5e0!3m2!1ses!2sco!4v1647617869218!5m2!1ses!2sco"
+    width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"></iframe>
+  <hr>
+  <h2>Formularios</h2>
+  <h3>Elementos de formularios</h3>
+  <input type="text">
+  <br>
+  <input type="radio">
+  <br>
+  <input type="checkbox">
+  <br>
+  <input type="date">
+  <br>
+  <input type="color">
+  <br>
+  <input type="button" value="Boton">
+  <br>
+  <input type="submit">
+  <br>
+  <input type="reset">
+  <br>
+  <input type="file">
+  <br>
+  <input type="file" multiple>
+  <br>
+  <input type="hidden" name="idioma" value="es">
+  <br>
+  <input type="email">
+  <br>
+  <input type="number">
+  <br>
+  <input type="tel">
+  <br>
+  <input type="password">
+  <br>
+  <input type="search">
+  <br>
+  <textarea cols="50" rows="5"></textarea>
+  <br>
+  <select name="" id="">
+    <option value="">Html</option>
+    <option value="">Css</option>
+    <option value="">Js</option>
+    <option value="">PHP</option>
+    <option value="">Python</option>
+  </select>
+  <br>
+  <select name="" id="" multiple>
+    <option value="">Html</option>
+    <option value="">Css</option>
+    <option value="">Js</option>
+    <option value="">PHP</option>
+    <option value="">Python</option>
+  </select>
+  <br>
+  <input type="text" value="Solo lectura" readonly disabled>
+  <br>
+  <input type="text" placeholder="Escribe tu nombre">
+  <br>
+  <h3>Ejemplo de formulario</h3>
+  <h4>Formulario de login</h4>
+  <form action="" method="POST" autocomplete="off">
+    <!-- Sí inactivamos el autocomplete en el form afecta todo el formulario -->
+    <!-- También puede set GET -->
+    <label for="usuario">Usuario:</label>
+    <input type="text" name="usuario" id="usuario" placeholder="Escribe tu usuario" pattern="^[A-Za-z]+$"
+      title="Este campo sólo acepta letras" required>
+    <!-- Lo que tenemos en el pattern ^[]$ es una expresión regular -->
+    <br>
+    <label for="password">Password:</label>
+    <input type="password" name="password" id="password" placeholder="Escribe tu password" required>
+    <br>
+    <input type="submit">
+    <br>
+    <input type="reset">
+  </form>
+  <br>
+  <h4>Select, Radios, Checkbox</h4>
+  <form>
+    <!--- Cuando un formulario queda sin el action se envian a la misma página los datos -->
+    <p>Elige tu idioma</p>
+    <select name="idioma" required>
+      <option value="">
+        Elige una opción
+      </option>
+      <option value="es">Español</option>
+      <option value="en">Inglés</option>
+      <option value="fr" selected>Francés</option><!-- La opción selected solo debe ir una vez -->
+      <option value="it">Italiano</option>
+      <option value="pt">Portugués</option>
+    </select>
+    <p>Elige tu lenguaje de programación favorito: </p>
+    <input type="radio" name="lenguaje" id="radio-js" value="js" required><label for="radio-js">JavaScript</label>
+    <input type="radio" name="lenguaje" id="radio-py" value="py" checked><label for="radio-py">Python</label>
+    <input type="radio" name="lenguaje" id="radio-php" value="php"><label for="radio-php">PHP</label>
+    <p>Elige tus intereses: </p>
+    <label><input type="checkbox" name="intereses" value="deportes">Deportes</label>
+    <label><input type="checkbox" name="intereses" value="finanzas" checked>Finanzas</label>
+    <label><input type="checkbox" name="intereses" value="salud" checked>Salud</label>
+    <label><input type="checkbox" name="intereses" value="politica">Política</label>
+    <label><input type="checkbox" name="intereses" value="ecologia">Ecología</label>
+    <p>
+      <label>
+        <input type="checkbox" name="terminos" required>¿Aceptas los términos y condiciones?
+      </label>
+    </p>
+    <input type="submit">
+    <input type="reset">
+  </form>
+  <br>
+  <hr />
+  <footer>
+    Derechos reservados nn.co | Estudio de html | 2022 |
+    <a href="mailto:chrisvaec@gmail.com">Correo electrónico</a>|
+    <a href="tell:573003376588">Teléfono</a>|
+    <a href="https://api.whatsapp.com/send?phone=573003376588&&text=hola">WhatsApp</a>
+  </footer>
+  <script>
+    console.log("Esta página es un medio de aprendizaje de manejo de html");
+  </script>
+  <script src="assets/codigos.js"></script>
+  <!-- Con esta linea estamos llamando la hoja de código JS -->
+  <hr />
+</body>
+
 </html>
