Estudio de CSS 13042022

--- a/css/main.html
+++ b/css/main.html
@@ -115,6 +115,42 @@
                 explicabo dolor saepe soluta, ab sapiente recusandae adipisci velit! Fugiat laboriosam reprehenderit
                 eveniet dolorum deleniti nulla odit.
             </p>
+            <ol class="lista-pseudoclases">
+                <li>Enero</li>
+                <li>Febrero</li>
+                <li>Marzo</li>
+                <li>Abril</li>
+                <li>Mayo</li>
+                <li>Junio</li>
+                <li>Julio</li>
+                <li>Agosto</li>
+                <li>Septiembre</li>
+                <li>Octubre</li>
+                <li>Noviembre</li>
+                <li>Diciembre</li>
+            </ol>
+            <article class="articulo-pseudoclases">
+                <header>Esto es una header</header>
+                <p>Esto es un parrafo</p>
+                <div>Esto es una div</div>
+                <p>Esto es un parrafo</p>
+                <section>Esto es una section</section>
+                <p>Esto es un parrafo</p>
+                <div>Esto es una div</div>
+                <p>Esto es un parrafo</p>
+                <footer>Esto es un footer</footer>
+            </article>
+            <hr>
+            <h2>Pseudoelementos</h2>
+            <p>
+                <i>Bandai Myth Cloth Ex</i> <span class="saga-geminis">Saga de Géminis</span> <span class="saga-precio">500</span>
+            </p>
+            <p class="p-pseudoelementos">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque voluptatibus ipsum sit repellendus nesciunt suscipit maxime 
+                exercitationem! Nihil veritatis asperiores saepe aliquam cum voluptatem? Illo nam tenetur molestiae explicabo ex.
+            </p>
+            <input class="input-pseudoelementos" type="text" name="nombre" placeholder="Escribe tu nombre">
+            <hr>
             <a href="main.html#tarjet-pseudoclases">Volver al inicio</a>
         </article>
     </article>
