--- a/css/main.html
+++ b/css/main.html
@@ -143,13 +143,34 @@
             <hr>
             <h2>Pseudoelementos</h2>
             <p>
-                <i>Bandai Myth Cloth Ex</i> <span class="saga-geminis">Saga de Géminis</span> <span class="saga-precio">500</span>
+                <i>Bandai Myth Cloth Ex</i> <span class="saga-geminis">Saga de Géminis</span> <span
+                    class="saga-precio">500</span>
             </p>
             <p class="p-pseudoelementos">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque voluptatibus ipsum sit repellendus nesciunt suscipit maxime 
-                exercitationem! Nihil veritatis asperiores saepe aliquam cum voluptatem? Illo nam tenetur molestiae explicabo ex.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque voluptatibus ipsum sit repellendus
+                nesciunt suscipit maxime
+                exercitationem! Nihil veritatis asperiores saepe aliquam cum voluptatem? Illo nam tenetur molestiae
+                explicabo ex.
             </p>
             <input class="input-pseudoelementos" type="text" name="nombre" placeholder="Escribe tu nombre">
+            <hr>
+            <h2>Agrupar selectores</h2>
+            <form class="form-agrupar-selectores">
+                <input type="text" name="nombre" placeholder="Escribe tu nombre">
+                <input type="email" name="correo" placeholder="Escriibe tu correo">
+                <textarea name="comentarios" placeholder="Escribe tus comentarios" cols="30" rows="10"></textarea>
+                <input type="submit">
+            </form>
+            <hr>
+            <h2>Algoritmo de CSS</h2>
+            <ol>
+                <li>La cascada</li>
+                <li>La especificidad</li>
+                <li>La herencia</li>
+            </ol>
+            <blockquote id="cita-marco" class="cita-marco" style="background-color: blueviolet;">
+                Sé tolerante con los demás y estricto contigo mismo - <cite> Marco Aurelio</cite>
+            </blockquote>
             <hr>
             <a href="main.html#tarjet-pseudoclases">Volver al inicio</a>
         </article>
