--- a/css/main.html
+++ b/css/main.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS</title>
+    <!-- <link rel="stylesheet" href="css/reset.css"> -->
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="style.css"><!-- Aplicación de estilos externo -->
     <style>
         /* Aplicación de estilos interno */
@@ -27,6 +29,8 @@
         </h2>
         <!-- Aplicación de estilos en linea -->
     </article>
+    <hr>
+    <li><a href="box-model.html">Modelo de caja</a></li>
     <hr>
     <article>
         <h2>Selectores básicos</h2>
@@ -171,6 +175,15 @@
             <blockquote id="cita-marco" class="cita-marco" style="background-color: blueviolet;">
                 Sé tolerante con los demás y estricto contigo mismo - <cite> Marco Aurelio</cite>
             </blockquote>
+            <hr>
+            <h2>Reseteo y normalización de estilos</h2>
+            <hr>
+            <h2>Prefijos de los navegadores</h2>
+            <ul>
+                <li>Navegadores de Microsoft <code><b>-ms-</b></code></li>
+                <li>Firefox <code><b>-moz-</b></code></li>
+                <li>Todos los demás navegadores <code><b>-webkit-</b></code></li>
+            </ul>
             <hr>
             <a href="main.html#tarjet-pseudoclases">Volver al inicio</a>
         </article>
